# sakura_downloader

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/download_helper/: CMakeLists.txt  Downloader.cpp
src/http_client/: CMakeLists.txt  HttpClient.cpp
src/include/download_helper/: Downloader.h
src/include/http_client/: HttpClient.h
tools/: CMakeLists.txt
tools/downloader/: CMakeLists.txt  main.cpp
